version/0.31/_sources/api/solver/_autosummary/settings/settings_16.rst.txt
:orphan:

.. _settings_16:

settings
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.settings_16
    :show-inheritance:

.. rubric:: Attributes

========================================   ===========================================================

Attribute                                                                                      Summary

========================================   ===========================================================
:ref:`momentum <momentum_5>`                    Allows to change momentum model variables or settings.

:ref:`potential <potential_1>`                 Allows to change potential model variables or settings.

:ref:`structure <structure_1>`                 Allows to change structure model variables or settings.

:ref:`uds <uds_2>`                                   Allows to change uds model variables or settings.

:ref:`radiation <radiation_4>`                         Radiation settings for this boundary-condition.

:ref:`discrete_phase <discrete_phase_4>`             Allows to change DPM model variables or settings.

:ref:`geometry <geometry_4>`                    Allows to change geometry model variables or settings.

:ref:`phase <phase_39>`                                             Domain name to define settings on.

========================================   ===========================================================

.. rubric:: Included in:

========================================   ===================================

Parent                                                                 Summary

========================================   ===================================
:ref:`outflow_1_child <outflow_1_child>`       'child_object_type' of outflow.

========================================   ===================================

