version/0.34/_sources/api/solver/_autosummary/settings/settings_16.rst.txt
:orphan:

.. _settings_16:

settings
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.settings_16
    :show-inheritance:

.. rubric:: Attributes

========================================   ============================================================

Attribute                                                                                       Summary

========================================   ============================================================
:ref:`momentum <momentum_7>`                     Allows to change momentum model variables or settings.

:ref:`turbulence <turbulence_2>`               Allows to change turbulence model variables or settings.

:ref:`thermal <thermal_4>`                        Allows to change thermal model variables or settings.

:ref:`radiation <radiation_5>`                          Radiation settings for this boundary-condition.

:ref:`species <species_9>`                        Allows to change species model variables or settings.

:ref:`discrete_phase <discrete_phase_4>`              Allows to change DPM model variables or settings.

:ref:`potential <potential>`                    Allows to change potential model variables or settings.

:ref:`structure <structure_1>`                  Allows to change structure model variables or settings.

:ref:`uds <uds>`                                      Allows to change UDS model variables or settings.

:ref:`icing <icing_1>`                              Allows to change icing model variables or settings.

:ref:`geometry <geometry_6>`                     Allows to change geometry model variables or settings.

:ref:`phase <phase_18>`                                              Domain name to define settings on.

========================================   ============================================================

.. rubric:: Included in:

==========================================================   ==============================================

Parent                                                                                              Summary

==========================================================   ==============================================
:ref:`pressure_far_field_child <pressure_far_field_child>`       'child_object_type' of pressure_far_field.

==========================================================   ==============================================

